<resources>
    <string name="app_name">RegistrationForm</string>
    <string name="LastName">Last Name:</string>
    <string name="email">Email:</string>
    <string name="register">Register</string>
    <string name="FirstName">First Name</string>
    <string name="registration_form">Registration Form</string>
    <string name="phoneNumber">Phone number:</string>
    <string name="next">Next</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login:</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
</resources>